fix overflow content on mobile - footer was the reason

--- a/frontend/src/app/UI/Footer/Footer.module.scss
+++ b/frontend/src/app/UI/Footer/Footer.module.scss
@@ -41,7 +41,11 @@
 		}
 		&__navBox {
 			display: grid;
-			gap: rem(5);
+			gap: rem(14);
+			nav ul {
+				flex-wrap: wrap;
+				row-gap: rem(5);
+			}
 		}
 		& nav {
 			display: flex;
